# SalesRunChallenge

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base_templates/global/: base_template.html
gamification/: settings.py  urls.py
gamification/modules/challenge/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gamification/modules/challenge/migrations/: 0001_initial.py  0002_alter_category_options_alter_challenge_options.py  0002_initial.py  0003_alter_userchallenge_challenge.py  0003_userchallenge_received_response_and_more.py
gamification/modules/challenge/templates/: assign_challenge.html  challenge.html  list_challenge.html
gamification/modules/commands/: apps.py
gamification/modules/commands/management/commands/: db.py
gamification/modules/user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gamification/modules/user/migrations/: 0001_initial.py  0002_alter_user_cpf.py
gamification/modules/user/templates/: account.html  list_users.html  login.html  profile.html
scripts/: start.sh  tests.sh
