[tool.poetry]
name = "salesrun"
version = "0.1.0"
description = ""
authors = ["ernesto.terra2003@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
black = "^24.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
boto3 = "^1.34.102"
django-storages = "^1.14.3"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
